# gourmand

./: AWS_CONCEPTS.md  AWS_NOTES.md  Cargo.toml  README.md
gourmand/: Cargo.toml
src/cli/: recipes_main.rs
src/lib/: mod.rs  system_prompts.rs
